# botxx

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: CompileOptions.cmake
src/bot/: CMakeLists.txt  main.cpp
